# ReaperPythonToolkit

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: architecture.md  compatibility.md  connection-lifecycle.md  installation.md  manual-reaper-validation.md  midi-timing.md  mmg-v3-migration.md  multi-client-ownership.md  protocol.md  python-api.md  quickstart.md  troubleshooting.md
examples/: connection_status.py  midi_audition.py  midi_item_preview.py  transport_controller.py
reaper/: json.lua  rptk_host.lua  rptk_host_core.lua  rptk_host_reload.lua  rptk_midi_items.lua  rptk_preview.lua  rptk_protocol.lua  rptk_sessions.lua  rptk_socket.lua  rptk_state.lua  rptk_synclog.lua  rptk_synclog_off.lua  rptk_synclog_on.lua  rptk_tracks.lua  rptk_udp.lua
reaper/lua/: README.md
schemas/: envelope.schema.json  error.schema.json  hello.schema.json  hello_ack.schema.json  midi.schema.json  preview.schema.json  state.schema.json  track.schema.json
src/reaper_toolkit/: __init__.py  async_client.py  client.py  commands.py  connection.py  errors.py  midi.py  models.py  protocol.py  status.py  transport.py  version.py
tests/integration/: fake_host.py  test_client.py  test_reconnect.py  test_resilience.py
tests/live_reaper/: __init__.py  conftest.py  test_live_reaper.py
tests/lua/: __init__.py  test_host_modules.py  test_socket_flush.py
tests/lua_integration/: __init__.py  conftest.py  reaper_host_runner.lua  test_lifecycle.py  test_protocol_contract.py  test_workflows.py
(+5 files in other folders)
