[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reaper-python-toolkit"
version = "0.2.0"
description = "A reusable localhost bridge between Python applications and Reaper"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Thomas"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
test = ["jsonschema>=4.20", "pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/reaper_toolkit"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
